--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@
   }
 
 
-  .btn1{
+  .btn1{ display:block;
 	border-radius:40px;
 	cursor:pointer;
 	padding: 5px 15px;
@@ -512,6 +512,18 @@
 	body {
 		overflow-x: hidden;
 	  }
+	
+	  .btn1{ display:none;
+	border-radius:40px;
+	cursor:pointer;
+	padding: 5px 15px;
+	height:35px;
+	font-size: 8pt;
+	font-family: Arial, Helvetica, sans-serif;
+	color:#000000;
+	background-color:rgba(255, 255, 255, 0);
+	border:1.5px #000000 solid;
+}
 
 	/*第一張卡*/
 	.wrapper{
