--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@
   }
 
 
-  .btn1{ display:block;
+  .btn1{ 
 	border-radius:40px;
 	cursor:pointer;
 	padding: 5px 15px;
@@ -513,16 +513,7 @@
 		overflow-x: hidden;
 	  }
 	
-	  .btn1{ display:none;
-	border-radius:40px;
-	cursor:pointer;
-	padding: 5px 15px;
-	height:35px;
-	font-size: 8pt;
-	font-family: Arial, Helvetica, sans-serif;
-	color:#000000;
-	background-color:rgba(255, 255, 255, 0);
-	border:1.5px #000000 solid;
+         .button-box{display:none;
 }
 
 	/*第一張卡*/
